feat: Temporary fix for esp

--- a/targets/esp32/platformio.ini
+++ b/targets/esp32/platformio.ini
@@ -23,7 +23,7 @@ build_flags =
 board_build.partitions = partitions.csv
 
 # Set the serial monitor port for your system 
-monitor_port = /dev/ttyUSB2
+monitor_port = /dev/cu.usbserial-0001
 monitor_speed = 115200
 
 # Uncomment the following lines to enable JTAG debbugging and flashing using an FT2232
@@ -35,6 +35,4 @@ monitor_speed = 115200
 #       IO13        AD0
 #       IO14        AD3
 #       IO15        AD2
-#       EN          AD4
-debug_tool = ftdi
-upload_protocol = ftdi
+
