Added ES8311 DAC (LyraT-Mini ADF Board)

--- a/targets/esp32/platformio.ini
+++ b/targets/esp32/platformio.ini
@@ -20,6 +20,7 @@ board = esp-wrover-b-3.3v
 framework = espidf
 build_flags =
     -DCONFIG_SPIRAM_CACHE_WORKAROUND    # Not sure if this is necessary for WROVER-B
+build_unflags = -Wl,--end-group
 board_build.partitions = partitions.csv
 
 # Set the serial monitor port for your system 
