--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -42,7 +42,7 @@ jobs:
     - name: Install python3-protobuf
       run: sudo pip3 install protobuf grpcio-tools
     - name: List files in cspot directory
-      run: echo "cspot/ files:" && ls cspot && echo "cspot/cJSON files:" && ls cspot/cJSON
+      run: echo "cspot/ files:" && ls cspot && echo "cspot/bell files:" && ls cspot/bell
     - name: cmake
       run: cd targets/cli && mkdir -p build && cd build && cmake ..
     - name: make
