feat: refactor targets/esp32 CMakeLists.txt

--- a/targets/esp32/main/CMakeLists.txt
+++ b/targets/esp32/main/CMakeLists.txt
@@ -1,13 +1,21 @@
-set(COMPONENT_SRCS
-    "main.cpp"
-    "ESPFile.cpp"
-    "sinks/AC101AudioSink.cpp"
-    "sinks/BufferedAudioSink.cpp"
-    "sinks/ES9018AudioSink.cpp"
-    "sinks/PCM5102AudioSink.cpp"
-    "sinks/InternalAudioSink.cpp"
-    "sinks/ac101.c"
+cmake_minimum_required(VERSION 3.5)
+
+# Main target sources
+file(GLOB SOURCES "*.cpp" "*.c" "sinks/*.cpp" "sinks/*.c")
+
+# Configure the target
+idf_component_register(
+    SRCS ${SOURCES}
+    INCLUDE_DIRS "." "sinks"
 )
-set(COMPONENT_ADD_INCLUDEDIRS "." "sinks")
-register_component(REQUIRES "cspot")
-component_compile_options(-std=gnu++17)
+
+# Build static library, do not build test executables
+option(BUILD_SHARED_LIBS OFF)
+option(BUILD_TESTING OFF)
+
+# Import cspot library
+add_subdirectory("../../../cspot" ${CMAKE_CURRENT_BINARY_DIR}/cspot)
+
+# Configure the target
+target_link_libraries(${COMPONENT_LIB} PUBLIC cspot)
+target_compile_options(${COMPONENT_LIB} PRIVATE -std=gnu++17)
