--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -9,7 +9,6 @@ jobs:
           os: [macos-latest, ubuntu-latest]
         fail-fast: false
     runs-on:  ${{ matrix.os }}
-
     steps:
     - uses: actions/checkout@v2
       with:
@@ -42,7 +41,7 @@ jobs:
     - name: Install python3-protobuf
       run: sudo pip3 install protobuf grpcio-tools
     - name: List files in cspot directory
-      run: echo "cspot/ files:" && ls cspot && echo "cspot/bell files:" && ls cspot/bell
+      run: echo "cspot/ files:" && ls cspot && echo "cspot/bell files:" && ls cspot/bell/cJSON
     - name: cmake
       run: cd targets/cli && mkdir -p build && cd build && cmake ..
     - name: make
