--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -102,7 +102,8 @@
         "queue": "cpp",
         "__functional_03": "cpp",
         "source_location": "cpp",
-        "future": "cpp"
+        "future": "cpp",
+        "__bits": "cpp"
     },
     "C_Cpp.intelliSenseEngineFallback": "Enabled",
     "cmake.sourceDirectory": "${workspaceFolder}/targets/cli"
