fix: Missing cmake

--- a/cspot/CMakeLists.txt
+++ b/cspot/CMakeLists.txt
@@ -36,5 +36,6 @@ set_source_files_properties(${PROTO_SRCS} ${PROTO_HDRS}
 add_library(cspot STATIC ${SOURCES} ${PROTO_SRCS})
 # PUBLIC to propagate includes from bell to cspot dependents
 target_compile_definitions(bell PUBLIC PB_ENABLE_MALLOC)
+target_compile_definitions(bell PUBLIC PB_FIELD_32BIT)
 target_link_libraries(cspot PUBLIC ${EXTRA_LIBS})
 target_include_directories(cspot PUBLIC "include" ${CMAKE_CURRENT_BINARY_DIR} ${NANOPB_INCLUDE_DIRS})
