--- a/.gitmodules
+++ b/.gitmodules
@@ -1,8 +1,4 @@
 [submodule "cspot/bell"]
 	path = cspot/bell
-	url = https://github.com/feelfreelinux/bell
-	branch = master
-
-[submodule "cspot/mdnssvc"]
-	path = cspot/mdnssvc
-	url = https://github.com/philippe44/mdnssvc
+	url = https://github.com/philippe44/bell
+	branch = Windows+fixes
