feat: Bring back track info

--- a/targets/cli/CMakeLists.txt
+++ b/targets/cli/CMakeLists.txt
@@ -50,6 +50,6 @@ add_subdirectory("../../cspot" ${CMAKE_CURRENT_BINARY_DIR}/cspot)
 # Configure the target
 add_executable(cspotcli ${SOURCES})
 target_link_libraries(cspotcli PUBLIC cspot ${EXTRA_LIBS}  ${THINGS_TO_LINK})
-target_link_options(cspotcli PUBLIC -fsanitize=address)
-target_compile_options(cspotcli PUBLIC -fsanitize=address -fno-omit-frame-pointer -O1)
+add_compile_options(-fsanitize=address -fno-omit-frame-pointer -O1)
+add_link_options(-fsanitize=address)
 target_include_directories(cspotcli PRIVATE "." ${EXTRA_INCLUDES})
